--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="descripiton" content="Minha página web">
-        <meta name="author" content="Mariana Storoni (Storoni)">
-        <meta name="keywords" content="promagramação">
-        <meta name="robots" content="">
-        <title>Títulos e Subtítulos</title>
+        <title>Tags de textos</title>
     </head>
     <body>
-        <h1>Título</h1>
-        <h2>Subtítulo</h2>
-        <h3>Subtítulo</h3>
-        <h4>Subtítulo</h4>
-        <h5>Subtítulo</h5>
-        <h6>Subtítulo</h6>
+       <h1>Tag de textos</h1>
+       <hr/>
+
+       <p>
+        Lorem <i>ipsum dolor</i> sit amet consectetur <br/>adipisicing elit. Assumenda odit exercitationem iure? Debitis, dolores veritatis. Nam aut natus, <strong>labore</strong>, vitae nobis in beatae <b>laudantium</b>, odit itaque eos suscipit architecto excepturi.
+        </p>
+        <br/><br/>
+
+        <span>
+            textos
+        </span>
+
+
     </body>
 </html>
