--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <html>
+
     <head>
         <meta charset="UTF-8">
-        <title>Tags de textos</title>
+        <title>Div</title>
     </head>
+
     <body>
-       <h1>Tag de textos</h1>
-       <hr/>
+        <h1>Div</h1>
+        <div class="header">
 
-       <p>
-        Lorem <i>ipsum dolor</i> sit amet consectetur <br/>adipisicing elit. Assumenda odit exercitationem iure? Debitis, dolores veritatis. Nam aut natus, <strong>labore</strong>, vitae nobis in beatae <b>laudantium</b>, odit itaque eos suscipit architecto excepturi.
-        </p>
-        <br/><br/>
+        </div>
 
-        <span>
-            textos
-        </span>
+        <div class="main">
+            
+        </div>
 
-
+        <div class="footer">
+            
+        </div>
     </body>
 </html>
