--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Links</title>
+        <title>Imagem</title>
     </head>
 
     <body>
-        <h1>Links</h1>
+        <h1>Imagem</h1>
 
-        <a href="./test.html">Link</a>
+        <img src="./JavaScript.png" width="200">
 
-        <p>Youtube: <a href="https://www.youtube.com/" target="_blank"</a> Clique aqui </p>
+        <h1>Imagem</h1>
+
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png" width="200" alt="Logo do ReactJS"
+        >
 
     </body>
 </html>
