--- a/index.html
+++ b/index.html
@@ -2,19 +2,27 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Imagem</title>
+        <title>Formulários</title>
     </head>
 
     <body>
-        <h1>Imagem</h1>
+        <h1>Formulários</h1>
 
-        <img src="./JavaScript.png" width="200">
+        <form>
+            <label>Input de texto</label><br>
+            <input type="text" placeholder="example@gmail.com"><br><br>
+        </form>
 
-        <h1>Imagem</h1>
+        <textarea></textarea><br><br>
 
-        <img 
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png" width="200" alt="Logo do ReactJS"
-        >
+        <select>
+            <option>Escolha...</option>
+            <option>Item 01</option>
+            <option>Item 02</option>
+        </select><br><br>
+
+
+        <button>Enviar</button>
 
     </body>
 </html>
