--- a/index.html
+++ b/index.html
@@ -2,27 +2,49 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Formulários</title>
+        <title>Input</title>
     </head>
 
     <body>
-        <h1>Formulários</h1>
+
+        <h1>Input</h1>
 
         <form>
-            <label>Input de texto</label><br>
-            <input type="text" placeholder="example@gmail.com"><br><br>
+            <p>Escolha sua Linguagem:</p>
+            <input type="radio" name="web" id="html">
+            <label for="html">HTML</label>
+            <input type="radio" name="web">
+            <label>CSS</label>
+            <input type="radio" name="web">
+            <label>JS</label><br><br>
+
+            <p>Escolha sua Linguagem:</p>
+            <input type="checkbox" name="web" id="html">
+            <label for="html">HTML</label>
+            <input type="checkbox" name="web">
+            <label>CSS</label>
+            <input type="checkbox" name="web">
+            <label>JS</label><br><br>
+
+            <label>Email:</label>
+            <input type="email" placeholder="exaple@gmail.com" ><br><br>
+
+            <label>Senha:</label>
+            <input type="password" placeholder="Senha"><br><br>
+
+            <label>Data:</label>
+            <input type="date" placeholder="01/01/2001"><br><br>
+
+            <label>Números:</label>
+            <input type="number" placeholder="01"><br><br>
+
+            <input type="file"><br><br>
+
+            <input type="text" placeholder="Seu nome" required><br><br>
+
+
+            <button type="button">Enviar</button>
         </form>
-
-        <textarea></textarea><br><br>
-
-        <select>
-            <option>Escolha...</option>
-            <option>Item 01</option>
-            <option>Item 02</option>
-        </select><br><br>
-
-
-        <button>Enviar</button>
 
     </body>
 </html>
