--- a/index.html
+++ b/index.html
@@ -2,49 +2,53 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Input</title>
+        <title>Tabela</title>
+
+        <style>
+            th, td {
+                border: 1px solid #000;
+                padding: 5px;
+                border-radius: 4px;
+                text-align: center;
+            }
+        </style>
     </head>
 
     <body>
 
-        <h1>Input</h1>
+        <h1>Tabela</h1>
 
-        <form>
-            <p>Escolha sua Linguagem:</p>
-            <input type="radio" name="web" id="html">
-            <label for="html">HTML</label>
-            <input type="radio" name="web">
-            <label>CSS</label>
-            <input type="radio" name="web">
-            <label>JS</label><br><br>
+        <table>
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Idade</th>
+                    <th>País</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Mariana</td>
+                    <td>36</td>
+                    <td>Brasil</td>
+                </tr>
+                <tr>
+                    <td>Maite</td>
+                    <td>35</td>
+                    <td>Brasil</td>
+                </tr>
+                <tr>
+                    <td>Fernanda</td>
+                    <td>24</td>
+                    <td>Brasil</td>
+                </tr>
+                <tr>
+                    <td colspan="2">Total de Pessoas</td>
+                    <td>3</td>
+                </tr>
 
-            <p>Escolha sua Linguagem:</p>
-            <input type="checkbox" name="web" id="html">
-            <label for="html">HTML</label>
-            <input type="checkbox" name="web">
-            <label>CSS</label>
-            <input type="checkbox" name="web">
-            <label>JS</label><br><br>
-
-            <label>Email:</label>
-            <input type="email" placeholder="exaple@gmail.com" ><br><br>
-
-            <label>Senha:</label>
-            <input type="password" placeholder="Senha"><br><br>
-
-            <label>Data:</label>
-            <input type="date" placeholder="01/01/2001"><br><br>
-
-            <label>Números:</label>
-            <input type="number" placeholder="01"><br><br>
-
-            <input type="file"><br><br>
-
-            <input type="text" placeholder="Seu nome" required><br><br>
-
-
-            <button type="button">Enviar</button>
-        </form>
+            </tbody>
+        </table>
 
     </body>
 </html>
